--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,5 +15,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+
     - name: Test
       run: go test -v ./...
